--- a/Java02_Github/nbproject/project.properties
+++ b/Java02_Github/nbproject/project.properties
@@ -27,9 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/Java02_Github.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jaybird-full-3.0.3.jar=lib\\jaybird-full-3.0.3.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.jaybird-full-3.0.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
